--- a/assets/scss/shared-ui/_variables.scss
+++ b/assets/scss/shared-ui/_variables.scss
@@ -245,8 +245,6 @@ $wordpress: (
 	adminmenu-sm: 36px, // Size for folded admin menu.
 ) !default;
 
-$scrollbar--width: 20px !default;
-
 $modal: (
 	z-index:     13,
 ) !default;
